--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <div class="containerHero">
-                            <img src="./img/circle.png" class="heroBg">
+                            <img src="./img/circle.png" class="heroBg animationRotate">
                             <img src="./img/phone.png" class="phone" </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="row align-items-center mt-3">
                     <div class="col-10">
-                        <p>Hello! I am Marco Garcia and I've been <b>creating digital and physical experiences for users since 2012</b>, working together with local, national and global brands; helping them in the process of adding value to their customer's
+                        <p>Hello! I am Marco Garcia and I've been <b>creating digital and physical user centered experiences since 2012</b>, working together with local, national and global brands; helping them in the process of adding value to their customer's
                             lives, thorough marketing, advertising, web development, user experience and innovation.</p>
                     </div>
                     <div class="col-2">
@@ -107,7 +107,7 @@
         <section>
             <div class="container">
                 <div class="row w-100 mt-5">
-                    <h2 class="light blue text-left">Some clients I have helped</h2>
+                    <h3 class="light blue text-left">Some clients I have helped</h3>
                 </div>
             </div>
             <div class="container">
@@ -117,49 +117,31 @@
                             <ul class="glide__slides">
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-02.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-03.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-04.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-05.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-06.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-07.svg" class="w-100 logoLight">
-
                                 </li>
                                 <li class="glide__slide">
                                     <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
-
                                 </li>
-
                             </ul>
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
         </section>
@@ -171,26 +153,38 @@
                         <h2 class="title text-left">Projects</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row w-100">
+                    <ul class="categories">
+                        <li class="active">Web development</li>
+                        <li>Advertising</li>
+                        <li>360°</li>
+                        <li>UX/UI</li>
+                        <li>Innovation</li>
+                        <li>Social media</li>
+                    </ul>
+
+                </div>
+                <div class="row w-100">
                     <div class="col-4">
-                        <div class="project card">
-                            <div class="image">
-                                <img src="${image}" class="w-100">
-                            </div>
-                            <div class="meta">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <h5>${projectName}</h5>
-                                        <p>${client}</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <button onclick="" class="btn">More info</button>
+                        <!-- Card template -->
+                        <div class="project">
+                            <div class="card">
+                                <div class="imageContainer">
+                                    <div class="overlay"></div>
+                                    <img src="./img/projects/enel_rewards.png" class="w-100">
+                                </div>
+                                <div class="meta">
+                                    <div class="row w-100">
+                                        <div class="col-12">
+                                            <h5 class="mt-4">Enel Rewards</h5>
+                                            <p class="mb-4">UX refinement and front end development</p>
+                                            <span class="mt-2">Read More</span>
+                                        </div>
                                     </div>
                                 </div>
-
                             </div>
-
                         </div>
+                        <!-- End: card template -->
                     </div>
                 </div>
             </div>
