Full Dark mode done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <section>
             <nav class="col-12">
-                <ul>
+                <ul class="darkText">
                     <li class="active">About me</li>
                     <li>Projects</li>
                     <li>Skills</li>
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
                         <h1>Everything for your brand</h1>
-                        <h4>Web development, digital marketing, design and more</h4>
+                        <h4 class="darkText">Web development, digital marketing, design and more</h4>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <div class="containerHero">
@@ -58,13 +58,13 @@
                 <div class="row">
                     <div class="col-12 flex-end">
                         <h2>Creating, developing and expanding brands</h2>
-                        <h5>For more than ten years</h5>
+                        <h5 class="darkText">For more than ten years</h5>
                         <div class="divider"></div>
                     </div>
                 </div>
                 <div class="row align-items-center mt-3">
                     <div class="col-10">
-                        <p>Hello! I am Marco Garcia and I've been <b>creating digital and physical user centered experiences since 2012</b>, working together with local, national and global brands; helping them in the process of adding value to their customer's
+                        <p class="darkText">Hello! I am Marco Garcia and I've been <b>creating digital and physical user centered experiences since 2012</b>, working together with local, national and global brands; helping them in the process of adding value to their customer's
                             lives, thorough marketing, advertising, web development, user experience and innovation.</p>
                     </div>
                     <div class="col-2">
@@ -154,13 +154,13 @@
                     </div>
                 </div>
                 <div class="row w-100">
-                    <ul class="categories">
+                    <ul class="categories darkText">
                         <li class="active">Web development</li>
-                        <li>Advertising</li>
-                        <li>360°</li>
-                        <li>UX/UI</li>
-                        <li>Innovation</li>
-                        <li>Social media</li>
+                        <li id="advertising">Advertising</li>
+                        <li id="proj360">360°</li>
+                        <li id="uxui">UX/UI</li>
+                        <li id="innovation">Innovation</li>
+                        <li id="socialMedia">Social media</li>
                     </ul>
 
                 </div>
@@ -168,7 +168,7 @@
                     <div class="col-4">
                         <!-- Card template -->
                         <div class="project">
-                            <div class="card">
+                            <!-- <div class="card">
                                 <div class="imageContainer">
                                     <div class="overlay"></div>
                                     <img src="./img/projects/enel_rewards.png" class="w-100">
@@ -181,12 +181,12 @@
                                             <span class="mt-2">Read More</span>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
+                                </div> -->
                         </div>
-                        <!-- End: card template -->
                     </div>
+                    <!-- End: card template -->
                 </div>
+            </div>
             </div>
         </section>
     </main>
