Creating cards. Still missing card per projects

--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 
                 </div>
                 <div class="row w-100">
-                    <div class="col-4">
+                    <div class="projects">
+                        <!-- <div class="col-4"> -->
                         <!-- Card template -->
-                        <div class="project">
-                            <!-- <div class="card">
+                        <!--<div class="card">
                                 <div class="imageContainer">
                                     <div class="overlay"></div>
                                     <img src="./img/projects/enel_rewards.png" class="w-100">
@@ -181,12 +181,12 @@
                                             <span class="mt-2">Read More</span>
                                         </div>
                                     </div>
-                                </div> -->
-                        </div>
+                                </div>
+                            </div> -->
+                        <!-- End: card template -->
+                        <!-- </div> -->
                     </div>
-                    <!-- End: card template -->
                 </div>
-            </div>
             </div>
         </section>
     </main>
