--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="scss/main.css">
     <!-- Required Core Stylesheet -->
     <link rel="stylesheet" href="https://unpkg.com/@glidejs/glide@3.2.3/dist/css/glide.core.min.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -63,12 +65,12 @@
                     </div>
                 </div>
                 <div class="row align-items-center mt-3">
-                    <div class="col-10">
+                    <div class="col-8 col-md-10 col-lg-10">
                         <p class="darkText">Hello! I am Marco Garcia and I've been <b>creating digital and physical user centered experiences since 2012</b>, working together with local, national and global brands; helping them in the process of adding value to their customer's
                             lives, thorough marketing, advertising, web development, user experience and innovation.</p>
                     </div>
-                    <div class="col-2">
-                        <img src="./img/marcoGarcia.png" class="d-block mX-auto">
+                    <div class="col-4 col-md-2 col-lg-2">
+                        <img src="./img/marcoGarcia.png" class="d-block mX-auto w-100">
                     </div>
                 </div>
             </div>
@@ -81,22 +83,22 @@
                     </div>
                 </div>
                 <div class="row justify-content-between w-100 mt-4">
-                    <div class="col-2">
+                    <div class="col-6 col-md-2 col-lg-2">
                         <div class="circle design">
                             <h2>Design</h2>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-6 col-md-2 col-lg-2">
                         <div class="circle mkt">
                             <h2>Marketing & advertising</h2>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-6 col-md-2 col-lg-2">
                         <div class="circle webDev">
                             <h2>Web development</h2>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-6 col-md-2 col-lg-2">
                         <div class="circle userEx">
                             <h2>User experiences</h2>
                         </div>
@@ -205,12 +207,12 @@
                     perView: 2,
                     gap: 10
                 },
-                380: {
+                768: {
                     perView: 1,
                     gap: 0
                 },
                 380: {
-                    perView: 1,
+                    perView: 3,
                     gap: 0
                 }
             }
