--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section>
-            <nav class="col-12">
+            <nav class="nav col-12">
                 <ul class="darkText">
                     <li class="active">About me</li>
                     <li>Projects</li>
@@ -57,8 +57,8 @@
     <main>
         <section id="aboutMe">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 flex-end">
+                <div class="row justify-content-flex-end">
+                    <div class="col-10 col-md-12 col-lg-12">
                         <h2>Creating, developing and expanding brands</h2>
                         <h5 class="darkText">For more than ten years</h5>
                         <div class="divider"></div>
