Projects running OK, filling up categories

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                 <div class="row w-100">
                     <ul class="categories darkText">
                         <li class="active">Web development</li>
-                        <li id="advertising">Advertising</li>
-                        <li id="proj360">360°</li>
-                        <li id="uxui">UX/UI</li>
-                        <li id="innovation">Innovation</li>
-                        <li id="socialMedia">Social media</li>
+                        <li id="advertising">Marketing</li>
+                        <li id="spatial">Spatial design</li>
+                        <!-- <li id="uxui">UX/UI</li> -->
+                        <li id="visualDesign">Visual design</li>
+                        <li id="socialMedia">Innovation</li>
                     </ul>
 
                 </div>
@@ -194,9 +194,14 @@
     </main>
     <!-- Projects  -->
     <script src="./js/projects.js"></script>
-    <script src="./js/functions.js"></script>
+    <script src="./js/projectsData/webDevelopment.js" "></script>
+    <script src="./js/projectsData/360.js "></script>
+    <script src="./js/projectsData/advertising.js "></script>
+    <script src="./js/projectsData/uxui.js "></script>
+    <!-- Main JS -->
+    <script src="./js/functions.js "></script>
     <!-- Glide JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide "></script>
     <script>
         new Glide('.glide', {
             autoplay: 4000,
