--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://unpkg.com/@glidejs/glide@3.2.3/dist/css/glide.core.min.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <!-- Google icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -78,8 +80,8 @@
         <section id="services">
             <div class="container">
                 <div class="row mt-3 w-100">
-                    <div class="col-12 col-md-6 col-lg-6">
-                        <h2 class="title text-left">Services</h2>
+                    <div class="col-12 col-md-12 col-lg-12">
+                        <h2 class="title text-left">I can help you with</h2>
                     </div>
                 </div>
                 <div class="row justify-content-between w-100 mt-4">
@@ -113,7 +115,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row w-100 mt-5">
+                <div class="row w-100 mt-5 mb-5">
                     <div class="glide">
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
@@ -156,7 +158,7 @@
                     </div>
                 </div>
                 <div class="row w-100">
-                    <ul class="categories darkText">
+                    <ul class="categories darkText" id="categories">
                         <li class="active">Web development</li>
                         <li id="advertising">Marketing</li>
                         <li id="spatial">Spatial design</li>
@@ -205,7 +207,7 @@
     <script>
         new Glide('.glide', {
             autoplay: 4000,
-            perView: 4,
+            perView: 6,
             gap: 50,
             breakpoints: {
                 1024: {
