Changing categories working

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section>
             <div class="container">
                 <div class="row w-100 mt-5">
-                    <h3 class="light blue text-left">Some clients I have helped</h3>
+                    <h3 class="light blue text-left">Some brands that I have boosted</h3>
                 </div>
             </div>
             <div class="container">
@@ -159,17 +159,17 @@
                 </div>
                 <div class="row w-100">
                     <ul class="categories darkText" id="categories">
-                        <li class="active">Web development</li>
+                        <li class="active" id="webDev">Web development</li>
                         <li id="advertising">Marketing</li>
                         <li id="spatial">Spatial design</li>
                         <!-- <li id="uxui">UX/UI</li> -->
                         <li id="visualDesign">Visual design</li>
-                        <li id="socialMedia">Innovation</li>
+                        <li id="innovation">Innovation</li>
                     </ul>
 
                 </div>
                 <div class="row w-100">
-                    <div class="projects">
+                    <div class="projects" id="projects">
                         <!-- <div class="col-4"> -->
                         <!-- Card template -->
                         <!--<div class="card">
@@ -193,13 +193,27 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="row">
+                <div class="col-12">
+                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+                    <script>
+                        hbspt.forms.create({
+                            region: "na1",
+                            portalId: "21634170",
+                            formId: "9b106632-eff9-48d7-897d-3fff6c5f9169"
+                        });
+                    </script>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Projects  -->
     <script src="./js/projects.js"></script>
     <script src="./js/projectsData/webDevelopment.js" "></script>
-    <script src="./js/projectsData/360.js "></script>
+    <script src="./js/projectsData/spatial.js "></script>
     <script src="./js/projectsData/advertising.js "></script>
-    <script src="./js/projectsData/uxui.js "></script>
+    <script src="./js/projectsData/visualDesign.js "></script>
     <!-- Main JS -->
     <script src="./js/functions.js "></script>
     <!-- Glide JS -->
