--- a/index.html
+++ b/index.html
@@ -108,13 +108,50 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="glass">
             <div class="container">
                 <div class="row w-100 mt-5">
-                    <h3 class="light blue text-left">Some brands that I have boosted</h3>
+                    <div class="col-6">
+                        <h2 class="lightTitle text-left">Some brands that I have boosted</h3>
+                    </div>
+                    <div class="col-5">
+                        <div class="glide">
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-02.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-03.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-04.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-05.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-06.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-07.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="container">
+            <div>
+                <img src="./img/arrowHeadUp.svg" class="arrowHeadUp">
+            </div>
+            <!-- <div class="container">
                 <div class="row w-100 mt-5 mb-5">
                     <div class="glide">
                         <div class="glide__track" data-glide-el="track">
@@ -145,9 +182,9 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> 
                 </div>
-            </div>
+            </div>-->
         </section>
         <!-- PROJECTS -->
         <section>
@@ -157,7 +194,7 @@
                         <h2 class="title text-left">Projects</h2>
                     </div>
                 </div>
-                <div class="row w-100">
+                <div class="row w-100 noWrap mY-5">
                     <ul class="categories darkText" id="categories">
                         <li class="active" id="webDev">Web development</li>
                         <li id="advertising">Marketing</li>
@@ -194,6 +231,98 @@
             </div>
         </section>
         <section>
+            <div class="container">
+                <div class="row w-100">
+                    <div class="col-12 col-md-6 col-lg-6 mYColombia
+                    -5">
+                        <h2 class="title text-left">Skills</h2>
+                    </div>
+                </div>
+                <div class="row w-100">
+                    <h2 class="lightTitle">Web development</h2>
+                </div>
+                <div class="row w-100">
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Frontend development</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/adobeCreativeSuite.svg" class="logoPill"></span>Adobe Suite</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/js.svg" class="logoPill"></span>JS</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/html.svg" class="logoPill"></span>HTML</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/sass.svg" class="logoPill"></span>Css / Sass</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/googleAnalytics.svg" class="logoPill"></span>Google analytics</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/react.svg" class="logoPill"></span>React</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/firebase.svg" class="logoPill"></span>Firebase</p>
+                    </div>
+
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>SEO</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>eCommerce</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Wordpress</p>
+                    </div>
+                </div>
+
+                <div class="row w-100">
+                    <h2 class="lightTitle">Interface design</h2>
+                </div>
+                <div class="row w-100">
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>UX/UI</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/figma.svg" class="logoPill"></span>Figma</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Design thinking</p>
+                    </div>
+                </div>
+                <div class="row w-100">
+                    <h2 class="lightTitle">3D modeling</h2>
+                </div>
+                <div class="row w-100">
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/rhino.png" class="logoPill"></span>Rhinoceros</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/artlantis.png" class="logoPill"></span>Artlantis</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="./img/skills/vray.png" class="logoPill"></span>Vray</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Interior design</p>
+                    </div>
+                </div>
+                <div class="row w-100">
+                    <h2 class="lightTitle">Workflow and management</h2>
+                </div>
+                <div class="row w-100">
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Scrum</p>
+                    </div>
+                    <div class="pill">
+                        <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Agile</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="row">
                 <div class="col-12">
                     <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
@@ -221,7 +350,7 @@
     <script>
         new Glide('.glide', {
             autoplay: 4000,
-            perView: 6,
+            perView: 2,
             gap: 50,
             breakpoints: {
                 1024: {
@@ -229,12 +358,12 @@
                     gap: 10
                 },
                 768: {
-                    perView: 1,
-                    gap: 0
+                    perView: 3,
+                    gap: 20
                 },
                 380: {
                     perView: 3,
-                    gap: 0
+                    gap: 20
                 }
             }
         }).mount()
