Proyect Cards almost done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </nav>
         </section>
 
-        <section>
+        <section class="mb-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
@@ -57,7 +57,7 @@
         </section>
     </header>
     <main>
-        <section id="aboutMe">
+        <section id="aboutMe" class="mY-5">
             <div class="container">
                 <div class="row justify-content-flex-end">
                     <div class="col-10 col-md-12 col-lg-12">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section id="services">
+        <section id="services" class="mY-5">
             <div class="container">
                 <div class="row mt-3 w-100">
                     <div class="col-12 col-md-12 col-lg-12">
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="glass">
+        <section class="glass" class="mY-5">
             <div class="container">
                 <div class="row w-100 mt-5">
                     <div class="col-6">
@@ -141,6 +141,9 @@
                                     </li>
                                     <li class="glide__slide">
                                         <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
+                                    </li>
+                                    <li class="glide__slide">
+                                        <img src="./img/clients/clients-09.svg" class="w-100 logoLight">
                                     </li>
                                 </ul>
                             </div>
@@ -187,7 +190,7 @@
             </div>-->
         </section>
         <!-- PROJECTS -->
-        <section>
+        <section class="mY-5">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-md-6 col-lg-6">
@@ -229,8 +232,22 @@
                     </div>
                 </div>
             </div>
+            <!--<div class="modalContainer">
+                 <div class="modalBg">
+                    <div class="cardMeta">
+                        <h3 class="client">${client}</h3>
+                        <h2 class="title">${title}</h2>
+                        <p class="year">${year}</p>
+                        <p class="description">${description}</p>
+                        <ul class="pills">
+
+                        </ul>
+
+                    </div> 
+                </div>-->
+            </div>
         </section>
-        <section>
+        <section class="mY-5">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-md-6 col-lg-6 mYColombia
@@ -322,7 +339,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="mY-5">
             <div class="row">
                 <div class="col-12">
                     <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
@@ -358,11 +375,11 @@
                     gap: 10
                 },
                 768: {
-                    perView: 3,
+                    perView: 2,
                     gap: 20
                 },
                 380: {
-                    perView: 3,
+                    perView: 1,
                     gap: 20
                 }
             }
