Modal wrorking, bug with description text of meta cards

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                     </div>
                 </div>
             </div>
+            <div class="projectsModal"></div>
             <!--<div class="modalContainer">
                  <div class="modalBg">
                     <div class="cardMeta">
